--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <header>
-    <h1>Energia andmed - Avaleht</h1>
+    <h1>Energia andmed | Avaleht</h1>
 </header>
 <body>
     <main>
-        <a href="import">Impordi JSON</a>
+        <a href="import">Impordi JSON</a> | <a href="external">Välis API</a>
         <ul>
         <% sisu.forEach(object => { %>
             <li>
