lõin ühenduse andmebaasiga, Importimine siia-maani ei tööta

--- a/web/views/externalandmed.ejs
+++ b/web/views/externalandmed.ejs
@@ -48,6 +48,8 @@
             Мимо аллей, гаражей - вот и мой дом,
             извините я спать! Побеседум потом.
         </pre>
+        <br>
+        <img style="width:200px" src="/assets/cow.png">
     </main>
     
 </body>
