--- a/web/views/import.ejs
+++ b/web/views/import.ejs
@@ -13,12 +13,14 @@
     <main>
         <a href="/index">Tagasi avalehele</a>
         <form method="post">
-            <input type="file" name="fileName" required>
             <button type="submit">Impordi</button>
         </form>
         <p style="color: gray; font-size:10px">Ei tööta :C</p>
+        <br>
+        <img style="width:200px" src="/assets/cow.png">
     </main>
     
+
 </body>
 <footer>
     <p>Ervin Püsijainen</p>
