--- a/web/views/external.ejs
+++ b/web/views/external.ejs
@@ -18,7 +18,8 @@
             <input type="date" name="end"/>
             <button type="submit">Sync Prices</button>
         </form>
-        
+        <br>
+        <img style="width:200px" src="/assets/cow.png">
     </main>
     
 </body>
