--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -23,6 +23,10 @@
             </li>
         <% })%>
         </ul>
+        
+        <br>
+        <img style="width:200px" src="/assets/cow.png">
+
     </main>
     
 </body>
